Add player lives